// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`get-template-by-id-array should get templates by id array 1`] = `
{
  "content": [],
  "structuredContent": {
    "items": [
      {
        "alias": "_testTemplateArray1",
        "flags": [],
        "id": "00000000-0000-0000-0000-000000000000",
        "name": "_Test Template Array 1",
      },
      {
        "alias": "_testTemplateArray2",
        "flags": [],
        "id": "00000000-0000-0000-0000-000000000000",
        "name": "_Test Template Array 2",
      },
    ],
  },
}
`;

exports[`get-template-by-id-array should handle empty array 1`] = `
{
  "content": [],
  "structuredContent": {
    "items": [],
  },
}
`;

exports[`get-template-by-id-array should handle no id parameter 1`] = `
{
  "content": [],
  "structuredContent": {
    "items": [],
  },
}
`;

exports[`get-template-by-id-array should handle non-existent template ids 1`] = `
{
  "content": [],
  "structuredContent": {
    "items": [],
  },
}
`;

exports[`get-template-by-id-array should handle single template id 1`] = `
{
  "content": [],
  "structuredContent": {
    "items": [
      {
        "alias": "_testTemplateArray1",
        "flags": [],
        "id": "00000000-0000-0000-0000-000000000000",
        "name": "_Test Template Array 1",
      },
    ],
  },
}
`;
